<resources>
    <string name="app_name">LoginApp</string>
    <string name="add">New Add</string>
    <string name="no_data_found">No Data Found…!</string>
    <string name="search">Search…</string>
    <string name="logo">LOGO</string>
    <string name="text_ui_mode">UI Mode</string>

    <string name="log_in">Log In</string>
    <string name="email_or_phone_number">Email</string>
    <string name="password">Password</string>
    <string name="password_is_required">Password is required</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="email_is_required">Email is required</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="title_activity_second_login">SecondLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="salary">Salary</string>
    <string name="save">save</string>
    <string name="created_at">Created At</string>
    <string name="edit">edit</string>
    <string name="total_salary">Total Amount</string>
    <string name="logstaff">LoginStaff</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to">back to</string>
    <string name="login">Login</string>
    <string name="tap_add_new_note">Tap the Add button to create a new</string>
    <string name="textcontinue">Continue</string>
    <string name="success_addstaff_saved">Staff saved successfully</string>
    <string name="success_addstaff_delete">Staff deleted successfully!</string>
    <string name="success_addstaff_update">Staff update successfully!</string>
    <string name="success_login">Login successfully!</string>
    <string name="success_register">Register successfully!</string>
    <string name="errormessage">Unauthorized user</string>
    <string name="userroremail">User doesn\'t exist,please Register!</string>
    <string name="errorlogin">Login Failed, please try again</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="text_rupees">₹</string>
    <string name="name_is_required">Name is required</string>
    <string name="confirm_password_is_required">Confirm Password is required</string>

</resources>