<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbackground">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iv_applogo_changepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/logo"
            android:textColor="@color/colortext"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/iv_applogo_changepassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password_changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_box"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textPassword"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tverror_password_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_cut_shape"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="start"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_11sdp"
            android:text="@string/password_is_required"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/til_password_changepassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirmpassword_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/tverror_password_changepassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirmpassword_changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_box"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textPassword"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tverror_confirmpassword_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_cut_shape"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="start"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_11sdp"
            android:text="@string/confirm_password_is_required"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/til_confirmpassword_changepassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_backto_changepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/back_to"
            android:textColor="@color/colorgraytext"
            android:textSize="@dimen/_12sdp"
            android:translationX="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tverror_confirmpassword_changepassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_backtoLogin_changepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorbgpslah"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@+id/tv_backto_changepassword"
            app:layout_constraintTop_toBottomOf="@+id/tverror_confirmpassword_changepassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="@dimen/_9sdp"
            android:text="@string/submit"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/colorbgpslah"
            app:cornerRadius="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>