<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbackground">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iv_applogo_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/logo"
            android:textColor="@color/colortext"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/email_or_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/iv_applogo_forgotpassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email_forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_box"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textEmailAddress"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tverror_email_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_cut_shape"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="start"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_11sdp"
            android:text="@string/email_is_required"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/til_email_forgotpassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue_forgtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="@dimen/_9sdp"
            android:text="@string/textcontinue"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/colorbgpslah"
            app:cornerRadius="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>