<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainlayout_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorbackground"
            tools:context=".view.register.RegisterFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iv_applogo_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/logo"
                android:textColor="@color/colortext"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/iv_applogo_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_box"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="text"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tverror_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_cut_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_11sdp"
                android:text="@string/name_is_required"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/til_name_register">

            </androidx.appcompat.widget.AppCompatTextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/email_or_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/tverror_name_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_box"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textEmailAddress"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tverror_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_cut_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_11sdp"
                android:text="@string/email_is_required"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/til_email_register">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/background_box"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/tverror_email_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_box"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textPassword"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tverror_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_cut_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_11sdp"
                android:text="@string/password_is_required"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/til_password_register">

            </androidx.appcompat.widget.AppCompatTextView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_110sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="@dimen/_9sdp"
                android:text="@string/register"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorbgpslah"
                app:cornerRadius="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tverror_password_register">

            </com.google.android.material.button.MaterialButton>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom_register_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorpurpulewhite"
                android:padding="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_loginbackto_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="@color/colorbgpslah"
                    app:cornerRadius="@dimen/_3sdp"
                    app:icon="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>