<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_box"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="textEmailAddress"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tverror_name_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_cut_shape"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="start"
        android:padding="@dimen/_2sdp"
        android:paddingStart="@dimen/_11sdp"
        android:text="@string/this_field_is_required"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_name_add">

    </androidx.appcompat.widget.AppCompatTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_designation_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_box"
        android:hint="@string/designation"
        app:layout_constraintTop_toBottomOf="@+id/tverror_name_add">

        <AutoCompleteTextView
            android:id="@+id/et_deignationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="none"
            android:labelFor="@id/et_deignationType" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tverror_designation_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_cut_shape"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="start"
        android:padding="@dimen/_2sdp"
        android:paddingStart="@dimen/_11sdp"
        android:text="@string/this_field_is_required"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_designation_add">

    </androidx.appcompat.widget.AppCompatTextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salary_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_box"
        android:hint="@string/salary"
        app:layout_constraintTop_toBottomOf="@+id/tverror_designation_add"
        app:prefixText="@string/text_rupees">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_salary_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_box"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="numberDecimal"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tverror_salary_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_cut_shape"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="start"
        android:padding="@dimen/_2sdp"
        android:paddingStart="@dimen/_11sdp"
        android:text="@string/this_field_is_required"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_salary_add">

    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>